Created basic html structure, created GameGrid component for game grid and adding some basic styling

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,21 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Grid-Wrapper {
+  display: grid;
+  width: 30%;
+  height: 90px;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  border: 2px solid black;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Grid-Wrapper > div {
+  background-color: aqua;
+  border: 1px solid rgb(95, 83, 67);
+  align-content: space-around;
 }
+
+/* .Grid-Wrapper > div:nth-child(odd) {
+  background-color: burlywood;
+} */
