--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,25 @@
 
 .Grid-Wrapper {
   display: grid;
-  width: 30%;
-  height: 90px;
-  grid-template-columns: 33.33% 33.33% 33.33%;
+  width: 20em;
+  height: 20em;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   border: 2px solid black;
+  grid-gap: 1em;
   margin: 0 auto;
+  padding: 1em;
+  grid-auto-rows: auto;
 }
 
 .Grid-Wrapper > div {
+  overflow: hidden;
   background-color: aqua;
   border: 1px solid rgb(95, 83, 67);
-  align-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
 }
 
 /* .Grid-Wrapper > div:nth-child(odd) {
