--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+section {
+  display: flex;
+  flex-direction: row;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,7 +23,7 @@
   width: 20em;
   height: 20em;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr ;
+  grid-template-rows: 1fr 1fr 1fr;
   border: 2px solid black;
   grid-gap: 1em;
   margin: 0 auto;
@@ -26,7 +31,7 @@
   grid-auto-rows: auto;
 }
 
-.Grid-Wrapper > div {
+.none {
   overflow: hidden;
   background-color: aqua;
   border: 1px solid rgb(95, 83, 67);
@@ -34,6 +39,26 @@
   align-items: center;
   justify-content: center;
   font-size: 2em;
+}
+.winner {
+  overflow: hidden;
+  background-color: rgb(79, 233, 64);
+  border: 1px solid rgb(95, 83, 67);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  color: red;
+}
+.Player {
+  display: flex;
+  flex-direction: column;
+}
+
+.Icon {
+  border: 1px black solid;
+  border-radius: 30px;
+  padding: 10px;
 }
 
 /* .Grid-Wrapper > div:nth-child(odd) {
