--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@ section {
   display: flex;
   flex-direction: row;
   border: 1px solid black;
-  height: 85vh;
+  height: 80vh;
+  width: 100%;
+
   justify-content: center;
   color: #420c14;
 }
@@ -28,7 +30,7 @@ section {
   flex-direction: column;
   /* border: 1px solid red; */
   height: 100%;
-  width: 600px;
+  width: 60%;
   align-items: center;
 }
 
@@ -92,26 +94,56 @@ section {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  padding: 1%;
+  width: 24%;
 }
 
 .Icon {
   border: 1px black solid;
   border-radius: 30%;
-  padding: 10px;
+  padding: 5px;
   background-color: #ff5956;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 .Player > h2 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   margin-bottom: 10%;
 }
 
-.Icon-Changer {
-  margin-top: 10%;
-}
 .NameForm {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+.NameForm button {
+  margin-top: 2%;
+  width: fit-content;
+}
+.Icon-Changer {
+  margin-top: 15%;
+}
+.ChangeIconMsg {
+  display: block;
+  font-size: 0.9rem;
+}
+
+.Score {
+  margin-top: 20%;
+}
+.Score h3 {
+  font-size: 1.5rem;
+  color: #450d15;
+}
+.Score span {
+  font-size: 2rem;
+}
+.Turn {
+  margin: 20px auto;
+  background-color: #ffffff8c;
+  color: #420c14;
+  /* border-radius: 40%; */
+  padding: 1%;
+  width: 50%;
 }
 
 /* .Grid-Wrapper > div:nth-child(odd) {
