--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,8 @@ section {
   font-size: 0.5rem;
 }
 
-.Box {
+.Box,
+.Winner {
   background-color: #37d84b;
   border: 1px solid rgb(95, 83, 67);
   display: flex;
@@ -80,16 +81,34 @@ section {
   font-size: 2em;
   color: #3d4421;
 }
-.winner {
-  overflow: hidden;
-  background-color: rgb(79, 233, 64);
-  border: 1px solid rgb(95, 83, 67);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2em;
-  color: red;
+
+.Winner {
+  background-color: yellow;
 }
+
+.Reset-Btn {
+  margin-top: 10px;
+}
+.Drop-Down {
+  height: 50%;
+  margin-left: 10px;
+}
+
+.Grid-Selector,
+.Hidden-Selector {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.Hidden-Selector,
+.Hidden-Selector > select,
+option {
+  color: transparent;
+  background: transparent;
+  border: none;
+}
+
 .Player {
   display: flex;
   flex-direction: column;
