--- a/src/App.css
+++ b/src/App.css
@@ -34,40 +34,31 @@ section {
   align-items: center;
 }
 
-.Board-9 {
+.Board-9,
+.Board-25,
+.Board-49,
+.Board-81 {
   display: grid;
-  height: 50vh;
-  width: 50vh;
+  height: 55vh;
+  width: 60vh;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 5px;
+  grid-gap: 10px;
   font-size: 1rem;
 }
 .Board-25 {
-  display: grid;
-  height: 50vh;
-  width: 50vh;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  grid-gap: 5px;
   font-size: 0.5rem;
 }
 .Board-49 {
-  display: grid;
-  height: 50vh;
-  width: 50vh;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  grid-gap: 5px;
   font-size: 0.5rem;
 }
 .Board-81 {
-  display: grid;
-  height: 50vh;
-  width: 50vh;
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(9, 1fr);
-  grid-gap: 5px;
   font-size: 0.5rem;
 }
 
@@ -84,6 +75,8 @@ section {
 
 .Winner {
   background-color: yellow;
+  transform: rotate(360deg);
+  transition: transform 1s;
 }
 
 .Reset-Btn {
