--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 header {
-  background-color: #ff5956;
+  background-color: #ffff59;
   min-height: 5vh;
   height: 20vh;
   display: flex;
@@ -11,7 +11,7 @@ header {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  color: #420c14;
+  color: #101510;
 }
 
 section {
@@ -43,7 +43,7 @@ section {
   width: 60vh;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 10px;
+  grid-gap: 15px;
   font-size: 1rem;
 }
 .Board-25 {
@@ -70,11 +70,11 @@ section {
   align-items: center;
   justify-content: center;
   font-size: 2em;
-  color: #3d4421;
+  color: #101510;
 }
 
 .Winner {
-  background-color: yellow;
+  background-color: #ffff59;
   transform: rotate(360deg);
   transition: transform 1s;
 }
@@ -144,7 +144,7 @@ option {
 }
 .Score h3 {
   font-size: 1.5rem;
-  color: #450d15;
+  color: #101510;
 }
 .Score span {
   font-size: 2rem;
@@ -152,7 +152,7 @@ option {
 .Turn {
   margin: 20px auto;
   background-color: #ffffff8c;
-  color: #420c14;
+  color: #101510;
   /* border-radius: 40%; */
   padding: 1%;
   width: 50%;
