--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+@font-face {
+  font-family: "VT323";
+  font-weight: 400;
+  src: local("Roboto"), url(./fonts/VT323-Regular.ttf) format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: VT323, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
