--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ section {
   flex-direction: row;
   height: 85vh;
   width: 100%;
-
-  justify-content: center;
+  justify-items: center;
+  align-items: center;
   color: #420c14;
 }
 .Board-Wrapper {
@@ -101,45 +101,60 @@ option {
   background: transparent;
   border: none;
 }
+.Box-Content {
+  font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
+/* ---- Player Panels ---> */
 .Player {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
   padding: 1%;
-  width: 20%;
-  height: 80%;
-  margin: auto 1%;
+  width: 20vw;
+  height: 70vh;
+  margin: auto 2%;
   background-color: #d8d8d8;
 }
-.Box-Content {
-  font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+
+.Player-Heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.Player-Heading h2 {
+  letter-spacing: 0.1rem;
+  font-size: 2rem;
 }
 .Icon {
+  display: inline-block;
   border: 1px black solid;
-  border-radius: 30%;
+  text-align: center;
+  border-radius: 10%;
   padding: 5px;
+  width: 20px;
   background-color: #969696;
   font-size: 1.5rem;
   font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.Player > h2 {
-  font-size: 2.5rem;
-  margin-bottom: 10%;
+.Player-Details {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
-
 .NameForm {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
   width: 100%;
 }
 .NameForm input {
   font-family: inherit;
   font-size: 1.5rem;
-  width: 90%;
-  /* margin: 0 auto; */
+  width: inherit;
 }
 .NameForm button {
   margin-top: 2%;
@@ -147,35 +162,52 @@ option {
   font-family: inherit;
   font-size: 1.5rem;
 }
-.Icon-Changer {
-  margin-top: 15%;
-  font-family: inherit;
-  font-size: 1.5rem;
-  width: 40%;
+.Weapon-Changer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
-.ChangeIconMsg {
-  display: block;
-  font-size: 0.9rem;
+.Weapon-Changer span {
+  font-size: 1.5rem;
 }
 
-.Score {
-  margin-top: 10%;
+.Weapon-Input {
+  font-family: inherit;
+  font-size: 1.5rem;
+  width: inherit;
 }
-.Score h3 {
-  font-size: 2.5rem;
-  color: #101510;
-  margin-bottom: 10px;
+
+.Score-Container {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.Score span {
+.Score-Container h3 {
   font-size: 3rem;
+  color: #101510;
+  margin: 0;
+}
+.Score {
+  display: inline-block;
+  font-size: 4rem;
+  margin: 0;
 }
 
 .Message {
   margin-top: 10px;
   font-size: 1.5rem;
 }
+
+.Turn-Box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .Turn {
-  margin: 20px auto;
   background-color: #ffffff8c;
   color: #101510;
   /* border-radius: 40%; */
@@ -183,10 +215,6 @@ option {
   width: 50%;
   font-size: 1.2rem;
 }
-
-/* .Grid-Wrapper > div:nth-child(odd) {
-  background-color: burlywood;
-} */
 
 @media only screen and (max-width: 867px) {
   .Board {
