--- a/src/App.css
+++ b/src/App.css
@@ -103,9 +103,9 @@ section {
 }
 .NameForm button {
   margin-top: 2%;
-  width: 85%;
+  width: 90%;
   font-family: inherit;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .Weapon-Changer {
   /* border: 1px solid yellow; */
@@ -141,44 +141,67 @@ section {
   /* margin: 0; */
 }
 
-.Message {
-  margin-top: 10px;
-  font-size: 1.5rem;
-}
-
 .Turn-Box {
   box-sizing: border-box;
-  border: 1px solid red;
-  height: 4vh;
-  margin-top: 0;
-  background-color: #37d84b;
+  height: 3.5vh;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #37d84a;
+  text-align: center;
 }
 
 .Turn,
 .No-Turn {
+  box-sizing: border-box;
   margin: 0;
-  background-color: #ffeb38;
+  text-align: center;
+  background-color: #37d84a;
+  height: 100%;
   width: 100%;
   color: #101510;
-  font-size: 1.3rem;
+  font-size: 1.3em;
+}
+.Turn {
+  background-color: #ffeb38;
 }
 
 /* <------ BOARD -----> */
 .Board-Wrapper {
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
   height: 100%;
   width: 60%;
   align-items: center;
 }
+.Board-Selector,
+.Hidden-Selector {
+  padding-top: 3em;
+  height: 15%;
+  text-align: center;
+  font-size: 1em;
+}
+
+.Hidden-Selector,
+.Hidden-Selector > select,
+option {
+  color: transparent;
+  background: transparent;
+  border: none;
+}
+
+.Drop-Down {
+  font-family: inherit;
+  height: 30%;
+  font-size: 1.2em;
+}
+
 .Board {
-  border: 1px solid black;
+  box-sizing: border-box;
   display: grid;
-  height: 55vh;
-  width: 35vw;
-  grid-gap: 15px;
-  font-size: 1rem;
+  height: 30%;
+  width: 100%;
+  grid-gap: 0.6em;
+  padding: 0.2em;
 }
 .Board-9 {
   grid-template-columns: repeat(3, 1fr);
@@ -207,7 +230,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2em;
+  font-size: 1em;
   color: #101510;
 }
 
@@ -218,31 +241,16 @@ section {
 }
 
 .Reset-Btn {
-  font-size: 1.2rem;
-  margin-top: 10px;
-}
-.Drop-Down {
-  height: 50%;
-  margin-left: 10px;
-  font-size: 1.1rem;
+  font-size: 1em;
+  margin-top: 0.8em;
 }
 
-.Board-Selector,
-.Hidden-Selector {
-  border: 1px solid red;
-  font-size: 1.6rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.Hidden-Selector,
-.Hidden-Selector > select,
-option {
-  color: transparent;
-  background: transparent;
-  border: none;
-}
 .Box-Content {
   font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.Message {
+  text-align: center;
+  margin-top: 1em;
+  font-size: 1.2em;
 }
