--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-# .App {
+* {
+  box-sizing: border-box;
+}
+App {
   display: flex;
   flex-direction: column;
   width: 100vw;
@@ -9,7 +12,7 @@
 }
 header {
   background-color: #ffeb38;
-  height: 15vh;
+  height: 10vh;
   width: 100%;
   margin: 0;
   display: flex;
@@ -19,18 +22,14 @@ header {
   font-size: 1.2em;
   color: #101510;
 }
-header h1 {
-  margin: 0;
-}
 
 section {
   margin: 0;
   background-color: #8cfd73;
   display: flex;
-  flex-direction: row;
-  height: 85vh;
+  flex-direction: column;
+  height: 90vh;
   width: 100vw;
-
   align-items: center;
   color: #420c14;
 }
@@ -38,22 +37,20 @@ section {
 /* —— Player Panels —> */
 
 .Player-Box {
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 75vh;
-  width: 22vw;
-  max-width: 22vw;
-  max-height: 75vh;
-  min-width: 22vw;
-  min-height: 75vh;
+  height: 18%;
+  width: 95%;
+  max-width: 95%;
+  max-height: 18%;
+  min-width: 95%;
+  min-height: 18%;
   margin: 0.3em;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 .Player {
-  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   /* border: 1px solid red; */
   height: 100%;
   width: 100%;
@@ -61,100 +58,93 @@ section {
 }
 
 .Player-Heading {
-  overflow-x: hidden;
   /* border: 1px solid blue; */
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  height: 30%;
-  width: 100%;
+  justify-items: center;
+  width: 30%;
+  min-width: 30%;
+  height: 100%;
+  max-height: 100%;
 }
 .Player-Heading h2 {
-  box-sizing: border-box;
+  height: 25%;
+  width: 90%;
   /* border: 1px solid yellow; */
-  text-align: center;
   letter-spacing: 0.1rem;
   font-size: 1.1em;
-  width: 90%;
   word-wrap: break-word;
-  height: 40%;
-  /* margin: 0; */
-  padding-bottom: 0;
-  margin-bottom: 0;
 }
 .Icon {
-  box-sizing: border-box;
-  border: 1px black solid;
-  border-radius: 10%;
+  display: inline-block;
   margin: 0;
-  padding: 0.2em;
-  width: fit-content;
+  width: 20%;
+  /* height: 100%; */
+  border: 1px black solid;
+  border-radius: 5%;
+  padding: 2%;
+  text-align: center;
   background-color: #ffeb38;
   font-size: 1em;
   font-family: Roboto, “Open Sans”, “Helvetica Neue”, sans-serif;
 }
 .Player-Details {
-  /* border: 1px solid red; */
-  height: 100%;
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+  width: 45%;
 }
 .NameForm {
-  margin-top: 20%;
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
+  justify-content: center;
 }
 .Name-Input,
 .Weapon-Input {
-  box-sizing: border-box;
   /* border: 1px solid black; */
+  width: 60%;
+  height: 50%;
   font-family: inherit;
   font-size: 0.9em;
-  width: 98%;
-  margin: 0 auto;
 }
 .NameForm button {
-  margin-top: 2%;
-  width: 90%;
   font-family: inherit;
   font-size: 0.8em;
   padding: 0;
+  width: 50%;
+  height: 45%;
 }
 .Weapon-Changer {
   /* border: 1px solid yellow; */
   display: flex;
   flex-direction: column;
-  height: 40%;
   align-items: center;
   justify-content: center;
 }
 .Weapon-Changer span {
-  box-sizing: border-box;
   display: inline-block;
-  text-align: center;
   font-size: 0.9em;
-  width: 100%;
   padding: 0;
+  width: 60%;
+  height: 40%;
 }
 
 .Score-Container {
-  height: 40%;
+  /* border: 1px solid pink; */
   display: flex;
   flex-direction: column;
+  width: 25%;
   align-items: center;
   justify-content: center;
 }
 .Score-Container h3 {
-  font-size: 2em;
-  color: #101510;
   margin: 0;
+  margin-top: 0.2em;
+  font-size: 1.5em;
+  color: #101510;
 }
 .Score {
   display: inline-block;
@@ -163,23 +153,21 @@ section {
 }
 
 .Turn-Box {
-  box-sizing: border-box;
-  height: 5%;
-  width: 100%;
   background-color: #37d84a;
-  text-align: center;
+  min-height: 12%;
+  max-height: 12%;
 }
 
 .Turn,
 .No-Turn {
-  box-sizing: border-box;
   margin: 0;
   text-align: center;
   background-color: #37d84a;
   height: 100%;
-  width: 100%;
+  width: 20%;
+  margin: 0 auto;
   color: #101510;
-  font-size: 1.1em;
+  font-size: 0.7em;
   padding: 0;
 }
 .Turn {
@@ -188,21 +176,28 @@ section {
 
 /* <——— BOARD ——> */
 .Board-Wrapper {
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  min-height: 100%;
-  width: 60%;
+  height: 60%;
+  width: 90%;
+  max-width: 90%;
+  max-height: 60%;
+  min-width: 90%;
+  min-height: 60%;
   align-items: center;
 }
 .Board-Selector,
 .Hidden-Selector {
-  /* border: 1px solid red; */
-  padding-top: 3em;
-  height: 10%;
-  min-height: 10%;
+  margin: 0.5em 0;
+  /* border: 1px solid yellow; */
+  width: 100%;
   text-align: center;
-  font-size: 1em;
+  min-width: 100%;
+  height: 5%;
+  max-height: 5%;
+  min-height: 5%;
+  font-size: 0.8em;
 }
 
 .Hidden-Selector,
@@ -215,40 +210,40 @@ option {
 
 .Drop-Down {
   font-family: inherit;
-  height: 40%;
   font-size: 1em;
+  height: 100%;
+  text-align: center;
 }
 
 .Board {
-  box-sizing: border-box;
+  border: 1px solid red;
   display: grid;
-  height: 35%;
-  width: 100%;
-  grid-gap: 0.8em;
-  padding: 0.2em;
+  height: 100%;
+  max-height: 100%;
+  width: 95%;
+  grid-gap: 1em;
+  padding: 0.4em;
 }
 .Board-9 {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  font-size: 1.5em;
 }
 .Board-25 {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  font-size: 0.5rem;
+  font-size: 1em;
 }
 .Board-49 {
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  font-size: 0.5rem;
-  height: 40%;
-  grid-gap: 0.6em;
+  font-size: 0.8em;
+  grid-gap: 1em;
 }
 .Board-81 {
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(9, 1fr);
-  font-size: 0.5rem;
-  grid-gap: 0.6em;
-  height: 50%;
+  font-size: 0.6em;
 }
 
 .Box,
@@ -258,7 +253,6 @@ option {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1em;
   color: #101510;
 }
 
@@ -269,18 +263,30 @@ option {
 }
 
 .Reset-Btn {
+  /* border: 1px solid red; */
   font-size: 0.7em;
-  margin-top: 0.8em;
+  margin: 0.3em;
 }
 
 .Box-Content {
   font-family: Roboto, “Open Sans”, “Helvetica Neue”, sans-serif;
 }
+.Message-Box {
+  width: 100%;
+  height: 10%;
+  /* border: 1px solid red; */
+  margin: 0;
+  font-size: 0.85em;
+  min-height: 10%;
+  max-height: 10%;
+}
 
-.Message, .No-Message {
+.Message,
+.No-Message {
   text-align: center;
-  margin-top: 1em;
-  font-size: 1em;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 .No-Message {
   color: transparent;
@@ -291,4 +297,3 @@ option {
     background-color: lightblue;
   }
 }
-
